k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: k8s-django-app:local
          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health/
              port: 8000

          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
